# nihil

./: .gitignore  .gitmodules  README.md  nihil.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
nihil/: __init__.py  controller.py  docker_manager.py  nihilBanner.py  nihilController.py  nihilDoctor.py  nihilError.py  nihilFormatter.py  nihilHelp.py  nihilHistory.py  nihilManager.py
nihil/cli/: __init__.py  controller.py  parser.py
nihil/config/: __init__.py  defaults.py  user_config.py
nihil/console/: __init__.py  banner.py  formatter.py
nihil/exceptions/: __init__.py  errors.py
nihil/features/: __init__.py  browser_ui.py  images.py
nihil/manager/: __init__.py  manager.py
nihil/utils/: __init__.py  doctor.py  history.py  platform_info.py
tests/: README.md  conftest.py  test_browser_ui.py  test_cli_controller.py  test_cli_parser.py  test_config.py  test_console_banner.py  test_images.py  test_nihilError.py  test_nihilFormatter.py  test_nihilHistory.py  test_nihilManager.py
