[project]
name = "nihil"
version = "0.1.0"
description = "Nihil - by 0xbbuddha and Goultarde"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0",
]

authors = [{ name = "0xbbuddha" }, { name = "Goultarde" }]
license = "MIT"

[project.scripts]
nihil = "nihil.nihilController:main"
