[project]
name = "nihil"
version = "1.0.0"
description = "Nihil - by 0xbbuddha and Goultarde"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0",
    "argcomplete>=3.2.0",
    "rich",
    "pyyaml>=6.0",
]

authors = [{ name = "0xbbuddha" }, { name = "Goultarde" }]
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
nihil = "nihil.cli.controller:main"

[tool.coverage.run]
source = ["nihil"]
branch = true
omit = ["nihil/__main__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
show_missing = true
fail_under = 0
